Improve vocabulary domain support (#1847)